--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -24,6 +24,11 @@ environments:
                 python_file: "file://tests/entrypoint.py"
                 # this call supports all standard pytest arguments
                 parameters: ["file:fuse://tests/integration", "--cov=charming_aurora"]
+            libraries:
+              - pypi:
+                  package: pytest
+              - pypi:
+                  package: pytest-cov
       #######################################################################################
       # this is an example job with single ETL task based on 2.1 API and wheel_task format #
       ######################################################################################
